gccida/g3/split_1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48454:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48460:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v3.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48461:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v47 = ( __int64)x0[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48467:38: error: expected ')'
if ( ix86_comparison_operator( ( rtx)v146, VOIDmode) ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48467:30: note: to match this '('
if ( ix86_comparison_operator( ( rtx)v146, VOIDmode) ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48469:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v146; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48469:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v146; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48478:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1133( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48486:38: error: expected ')'
if ( ix86_comparison_operator( ( rtx)v48, VOIDmode) ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48486:30: note: to match this '('
if ( ix86_comparison_operator( ( rtx)v48, VOIDmode) ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48488:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v48; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48488:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v48; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48497:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1135( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48506:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)x0[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48507:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v3.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48513:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v116; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48514:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_943( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48518:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v44 = ( __int64)x0[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48519:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v3.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48523:31: error: expected ')'
if ( !register_operand( ( rtx)v45, VOIDmode) ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48523:23: note: to match this '('
if ( !register_operand( ( rtx)v45, VOIDmode) ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/insn-recog.c:48525:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v45; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/split_1/src/obj/insn-recog.o] Error 1
